--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <link href="css/default.css" rel="stylesheet" />
-    <script src="js/orderSoft.js" type="text/javascript"></script>
+    <script src="js/ordersoft-client-js/orderSoft.js" type="text/javascript"></script>
     <script src="js/main.js"></script>
-    <script src="js/listJSLibrary.js" type="text/javascript"></script>
     <title>Kitchen</title>
 </head>
 <body>
