--- a/index.html
+++ b/index.html
@@ -11,35 +11,27 @@
     <div class="header">
         <div id="date"></div>
     </div>
+
     <div id="orders-container">
-        <template id="displayOrder">
-            <!--<p class="tableNum"></p>-->
-            <!--<p class="orderTime>-->
-        </template>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
-        <div class="order">Content goes here!</div>
+        
     </div>
+
     <div id="modalAuthenticate" class="modal">
         <div class="modal-content">
             <!--checks ip input to server-->
             <div id="serverAuthenticate">
                 <p1>Enter server IP</p1>
-                <p>http:// <input type="text" placeholder="Enter OrderSoft IP" id="ip" />/</p>
-               
+                <p>http:// <input type="text" placeholder="Enter OrderSoft IP" id="ip" value="orderhard.soundclout.me:3141">/</p>
+                <p id="wrongIP"></p>
                 <button id="btnNext">Next</button> 
             </div>
             <!-- log in -->
             <div id="userLogin" class="hide">
                 <p1>Username</p1>
-                <input type="text" placeholder="Enter username" id="username">            
+                <input type="text" placeholder="Enter username" id="username" value="HenryDeng">            
                 <p1>Password</p1>
-                <input type="text" placeholder="Enter password" id="password">
+                <input type="password" placeholder="Enter password" id="password" value="keyboard">
+                <p id="wrongLogin"></p>
                 <button id="btnLogin">Log in</button>
                 <button id="btnReturn">Return to server input</button>
             </div>
@@ -47,8 +39,8 @@
     </div>
 
     <div id="footer">
-        <button class="flex-button " id="btnRemove1">Remove 1</button>
         <button class="flex-button">Undo</button>
+        <button class="flex-button" id="refresh">Refresh</button>
         <button class="flex-button history" id="viewHistory">History</button>
         <!-- modal 
             TODO shouldn't be in footer
@@ -60,5 +52,18 @@
             </div>
         </div> -->
     </div>
+
+    <template id="orderTemplate">
+        <div class="order">
+            <div class="orderBanner">
+                <label class="displayTableNumber"></label>
+                <label class="displayOrderTime"></label>
+            </div>
+            <ul class="displayDishes displayDishSizes">Dishes
+            </ul>
+            <div class="displayNotes">Notes</div>
+            <button class="orderComplete">Complete order</button>
+        </div>
+    </template>
 </body>
 </html>
