cleaned up shit

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <div class="header">
         <div id="date"></div>
     </div>
-
-    <div id="orders-container">
-        
-    </div>
+    <div id="orders-container"></div>
 
     <div id="modalAuthenticate" class="modal">
         <div class="modal-content">
@@ -42,15 +39,12 @@
         <button class="flex-button">Undo</button>
         <button class="flex-button" id="refresh">Refresh</button>
         <button class="flex-button history" id="viewHistory">History</button>
-        <!-- modal 
-            TODO shouldn't be in footer
         <div id="orderHistory" class="modal">
-             Modal content
             <div class="modal-content">
                 <span class="close" id="close">&times;</span>
                 <p>big ol table of orders</p>
             </div>
-        </div> -->
+        </div> 
     </div>
 
     <template id="orderTemplate">
