started view history

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!--checks ip input to server-->
             <div id="serverAuthenticate">
                 <p1>Enter server IP</p1>
-                <p>http:// <input type="text" placeholder="Enter OrderSoft IP" id="ip" value="orderhard.soundclout.me:3141">/</p>
+                <p>http:// <input type="text" placeholder="Enter OrderSoft IP" id="ip" value="10.219.219.4:8080">/</p>
                 <p id="wrongIP"></p>
                 <button id="btnNext">Next</button> 
             </div>
